# whisper-intelligibility-measure

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake_modules/: cpm.cmake
plugin/: AnalysisRegions.cpp  AnalysisRegions.h  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  Comms.cpp  Comms.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Types.h  Utils.h
plugin/GuiComponents/: Graph.cpp  Graph.h  ResultsTable.cpp  ResultsTable.h
plugin/test/: CMakeLists.txt  tests.cpp
whisper/python-service/: audio_broadcaster.py  defaults.yaml  inference.py  requirements.txt  si_service.py
whisper/python-service-simulator/: defaults.yaml  inference.py  requirements.txt  si_service.py
